Change the manage passwords bubble to handle overflow better.

After https://chromium-review.googlesource.com/c/chromium/src/+/717498 GridLayout respects the minimal width of the column. ManagePasswordItemsView should use the feature instead of conducting layout itself.

Bug: 760463
Change-Id: Ib41e68291fd7578bbd4da9eede6cd9bf2064973c
Reviewed-on: https://chromium-review.googlesource.com/754834
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514120}
Former-commit-id: ebde979cc2d5fd8956cab9785ad40c276fef4811