chrome/browser/ui/views/passwords/manage_passwords_bubble_view.cc
@@ -671,8 +671,7 @@ ManagePasswordsBubbleView::ManageView::ManageView(
   // this site" message.
   if (!parent_->model()->local_credentials().empty()) {
     ManagePasswordItemsView* item = new ManagePasswordItemsView(
-        parent_->model(), &parent_->model()->local_credentials(),
-        kDesiredBubbleWidth);
+        parent_->model(), &parent_->model()->local_credentials());
     layout->AddView(item);
   } else {
     views::Label* empty_label = new views::Label(
